api update, adding a definition
